--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/GraphTheoristSketchpad.csproj
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/GraphTheoristSketchpad.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="ScottPlot" Version="5.0.39" />
     <PackageReference Include="ScottPlot.WPF" Version="5.0.39" />
   </ItemGroup>
