--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/GraphTheoristSketchpad.csproj
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/GraphTheoristSketchpad.csproj
@@ -9,9 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\67732.cur" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="ScottPlot" Version="5.0.39" />
     <PackageReference Include="ScottPlot.WPF" Version="5.0.39" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\67732.cur" />
   </ItemGroup>
 
 </Project>
