--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/GraphTheoristSketchpad.csproj
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/GraphTheoristSketchpad.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="Resources\67732.cur" />
+    <None Remove="Resources\eraser.cur" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,7 +30,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\67732.cur" />
+    <Resource Include="Resources\67732.cur">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\eraser.cur">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
